--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,23 @@
     <string name="weight">Peso (Kg)</string>
     <string name="height">Altura (cm)</string>
     <string name="calc">Calcular</string>
-    <string name="fields_messages">Todos os campos devem ser maiores que zero</string>
+    <string name="fields_messages">Todos os campos devem ser maiores que zero</string>]
+    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
+    <string name="imc_very_low_weight">Muito abaixo do peso</string>
+    <string name="imc_low_weight">Abaixo do peso</string>
+    <string name="normal">Normal</string>
+    <string name="imc_high_weight">Acima do peso</string>
+    <string name="imc_so_high_weight">Moderadamente obeso</string>
+    <string name="imc_severely_high_weight">Severamente obeso</string>
+    <string name="imc_extreme_weight">Extremamente obeso</string>
+    <string name="imc_response">Imc: %1$.2f</string>
+    <string name="save">Salvar</string>
+    <string name="calc_saved">Registro salvo com sucesso</string>
+    <string name="calc_removed">Registro removido com sucesso</string>
+    <string name="search">Buscar</string>
+    <string name="tmb_desc">TMB é o cálculo para descobrir a quantidade calórica que o corpo necessita com base no seu estilo de vida</string>
+    <string name="age">Idade</string>
+    <string name="tmb_response">Tmb: %1$.2f</string>
+    <string name="delete_message">Você realmente quer excluir o registro?</string>
+    <string name="cancel">Cancelar</string>
 </resources>
